...

_dialogBuilder(BuildContext context, PaymentResult paymentResult) {
  String title = "";
  String message = "";
  switch (paymentResult) {
    case PaymentAdvancedFlowFinished():
      title = "Finished";
      message = "Result code: ${paymentResult.resultCode}";
    case PaymentSessionFinished():
      title = "Finished";
      message = "Result code: ${paymentResult.resultCode}";
    case PaymentCancelledByUser():
      title = "Cancelled by user";
...
        content: Text(message),
        actions: <Widget>[
          TextButton(
            style: TextButton.styleFrom(
              textStyle: Theme.of(context).textTheme.labelLarge,
            ),
            child: const Text('Close'),
            onPressed: () {
              Navigator.of(context).pop();
            },
          ),
        ],
      );
...
