...
        child: Center(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              TextButton(
                onPressed: () => startDropInSessions(context),
                child: const Text("Drop-in sessions"),
              ),
              TextButton(
                onPressed: () => startDropInAdvancedFlow(context),
                child: const Text("Drop-in advanced flow"),
              ),
            ],
...
