...
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            // TextButton(
            //     onPressed: () => Navigator.pushNamed(context, "/dropInScreen"),
            //     child: const Text("Drop-in")),
            // TextButton(
            //     onPressed: () =>
            //         Navigator.pushNamed(context, "/cardComponentScreen"),
            //     child: const Text("Card component")),
            // if (isBlikSupported)
            //   TextButton(
...
